# AstraOS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  License.md  Makefile  README.md  SUFFIX.md  ToDo.md  kernel.efi  linker.ld
.cursor/: worktrees.json
.github/workflows/: build-latest.yml  static.yml
AstraKernel/: .gitignore  CMakeLists.txt  extracted_limine.conf  linker.ld  vars.fd
AstraKernel/assets/: cursor.h
AstraKernel/boot/: kernel_entry.asm  limine.cfg  limine.conf  limine.h  limine_requests.c
AstraKernel/doc/: boot_process.md  cursor_system.md  filesystem_design.md  interrupt_flow.md  kernel_architecture.md  keyboard_debug.md  memory_map.md  scheduler.md  syscall_table.md
AstraKernel/iso/boot/: initrd.img
AstraKernel/kernel/arch/x86_64/apic/: ioapic.c  lapic.c
AstraKernel/kernel/arch/x86_64/cpu/: gdt.asm  gdt.c  gdt64.c  idt.c  isr_stubs.asm  tss.c
AstraKernel/kernel/arch/x86_64/drivers/: ahci.c  framebuffer.c  hpet.c  load_cursor.c  lodepng_alloc.cpp  lodepng_wrapper.cpp  mouse_cursor.c  mouse_cursor.h  pci.c  pit.c  ps2_keyboard.c  ps2_mouse.c  serial.c  vga.c
AstraKernel/kernel/arch/x86_64/entry/: entry64.asm  init_stack.asm
AstraKernel/kernel/arch/x86_64/interrupts/: irq.c  isr.c
AstraKernel/kernel/arch/x86_64/mm/: buddy.cpp  dma.c  dma_heap.cpp  heap.c  heap.cpp  kmalloc.c  memory.c  paging64.c  pmm.c  slab.cpp  vmm.c
AstraKernel/kernel/arch/x86_64/sys/: syscall.asm  syscall.c
AstraKernel/kernel/arch/x86_64/util/: cpuid.c  ports.c
AstraKernel/kernel/core/: initcall.cpp  klog.c  kmain.c  panic.c  process.c  scheduler.c  shell.c  task.c  timers.c
AstraKernel/kernel/dev/: driver_manager.c  tty.c
AstraKernel/kernel/drivers/input/: input_core.c
AstraKernel/kernel/drivers/usb/core/: usb_descriptors.c  usb_device.c  usb_enumeration.c  usb_init.c  usb_manager.c  usb_transfer.c
AstraKernel/kernel/drivers/usb/hid/: hid_driver.cpp  hid_keyboard.c  hid_mouse.c  hid_usb_driver.c
AstraKernel/kernel/drivers/usb/hid/parser/: hid_parser.cpp  hid_report_descriptor.cpp
AstraKernel/kernel/drivers/usb/host/: ehci.c  ehci_qh.c  ehci_td.c  ohci.c  pci_msi.c  pci_usb_detect.c  pci_usb_routing.c  uhci.c  xhci.c  xhci_irq.c
AstraKernel/kernel/drivers/usb/hub/: usb_hub.c
AstraKernel/kernel/drivers/usb/util/: usb_debug.c  usb_helpers.c
AstraKernel/kernel/drivers/usb/xhci/: xhci_context.c  xhci_debug.c  xhci_device.c  xhci_doorbell.c  xhci_init_complete.c  xhci_ring.c  xhci_transfer.c
AstraKernel/kernel/fs/: devfs.c  ext2.c  fat32.c  initrd.c  ramfs.c  vfs.c
AstraKernel/kernel/gui/: event.c  event.h  ui.c  ui.h
AstraKernel/kernel/include/: apic.h  dma.h  driver_manager.h  drivers.h  heap_api.h  initcall.h  interrupts.h  ipc.h  kernel.h  klog.h  kmalloc.h  limits.h  memory.h  mmio.h  net.h  panic.h  pci_msi.h  pmm.h  stdlib.h  string.h  syscall.h  timer.h  tss.h  tty.h  types.h  vfs.h  vmm.h
AstraKernel/kernel/include/input/: input_core.h
AstraKernel/kernel/include/mm/: buddy.hpp  dma_heap.hpp  heap.hpp  metadata.hpp  slab.hpp
AstraKernel/kernel/include/usb/: pci_usb_routing.h  usb_core.h  usb_descriptors.h  usb_device.h  usb_hub.h  xhci.h  xhci_context.h  xhci_regs.h
AstraKernel/kernel/include/usb/hid/: hid_field.hpp  hid_parser.hpp  hid_report_descriptor.hpp
AstraKernel/kernel/include/usb/util/: usb_bits.h  usb_debug.h  usb_helpers.h
AstraKernel/kernel/installer/: installer.c  installer.h
AstraKernel/kernel/ipc/: ipc.c
AstraKernel/kernel/lib/: lodepng_compat.c  math.c  memset.d  png_stub.c  printf.c  stdio.c  stdlib.c  string.c
AstraKernel/kernel/net/: ethernet.c  ipv4.c  net.c  tcp.c  udp.c
AstraKernel/kernel/tests/: kernel_tests.c  kernel_tests.h  memory_tests.c  memory_tests.h
AstraKernel/kernel/usb/: hid.c  hid.h  usb.c  usb.h  usb_core.c  usb_core.h  xhci.c  xhci.h
AstraKernel/toolchain/config/: versions.json
AstraKernel/toolchain/scripts/: build_toolchain.sh  i686-elf-gcc.sh  x86_64-elf-gcc.sh
AstraKernel/tools/: create_iso.sh  generate_initrd.py  pad_file.py  qemu_run.sh
AstraKernel/user/apps/init/: init.c
AstraKernel/user/apps/samples/: file_test.c  hello.c  mem_test.c
AstraKernel/user/apps/sh/: shell.c
AstraKernel/user/libc/: crt0.asm  malloc.c  stdio.c  string.c  syscalls.c
arch/x86_64/boot/: boot.s  multiboot2_header.S  multiboot_header.S
arch/x86_64/cpu/: cpu_init.c  gdt.c  (+2 more)
boot/: loader.conf
boot/entries/: astra.conf
crypto/: mod.rs  rng.rs  sha256.rs
drivers/framebuffer/: fb.c
drivers/input/: input_core.c  input_init.c
drivers/pci/: pci.c
drivers/usb/: STRUCTURE.md
include/: apic.h  drivers.h  event.h  interrupts.h  io.h  kernel.h  klog.h  kmalloc.h  memory.h  mmio.h  pci_msi.h  pmm.h  string.h  timer.h  types.h  vmm.h
include/boot/: multiboot2.h
include/drivers/: framebuffer.h  input.h  pci.h
include/input/: input_core.h
include/kernel/: kmain.h  panic.h
include/lib/: printf.h  string.h  utils.h
include/mm/: heap.hpp  paging.hpp  pmm.hpp  region.hpp  vmm.hpp
include/usb/: pci_usb_routing.h  usb_core.h  usb_descriptors.h  usb_hid.h  usb_transfer.h  xhci.h  xhci_caps.h  xhci_context.h  xhci_events.h  xhci_internal.h  xhci_ports.h  xhci_proto.h  xhci_regs.h  xhci_rings.h  xhci_trb.h
kernel/: kmain.c  main.cpp  panic.c
kernel/acpi/: ACPI_OSC_USB.cpp
kernel/drivers/: serial.cpp  serial.hpp
kernel/efi/: gop.hpp
kernel/include/: acpi.h  ahci.h  apic.h  dma.h  drivers.h  event.h  interrupts.h  kernel.h  kmalloc.h  memory.h  mmio.h  pmm.h  sched.h  stddef.h  stdio.h  string.h  types.h  vmm.h
kernel/memory/: dma.c  pmm.cpp  pmm.hpp  vmm.cpp  vmm.hpp  vmm_internal.hpp
kernel/sched/: scheduler.c  scheduler.cpp
kernel/ui/: renderer.cpp  renderer.hpp  shell.cpp  shell.hpp
kernel/util/: Paging.cpp  io.hpp  klog.c  logger.cpp  logger.hpp  memory.cpp  paging.hpp  stubs.c  stubs.cpp
lib/: apic_stub.c  event_stub.c  input_stub.c  irq_stub.c  klog.c  kmalloc.c  mouse_cursor_stub.c  new.cpp  pmm_stub.c  printf.c  string.c  timer_stub.c  utils.c
mm/: heap.cpp  paging.cpp  pmm.cpp  region.cpp  vmm.cpp
tests/: CMakeLists.txt  kernel_test.cpp  test_c.c  test_mm.cpp
(+190 files in other folders)
